Add bosst dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
             - llvm-toolchain-trusty-5.0
           packages:
             - clang-5.0
+            - libboost-all-dev
       env: CCOMPILER=clang-5.0 CXXCOMPILER=clang++-5.0 BUILD_TYPE=Debug
     - os: linux
       compiler: 'clang-5.0-release'
@@ -19,6 +20,7 @@ matrix:
             - llvm-toolchain-trusty-5.0
           packages:
             - clang-5.0
+            - libboost-all-dev
       env: CCOMPILER=clang-5.0 CXXCOMPILER=clang++-5.0 BUILD_TYPE=Release
 
 install:
